# FindAndFixMe

./: .gitignore  Dockerfile  Dockerfile.sandbox  docker-compose.yml  generate_seed.py  install.sh  main.py  requirements.txt  test_target.cpp  trace_data.sqlite-shm  trace_data.sqlite-wal
backend/: api.py
backend/data/: __init__.py  db_manager.py  instrument.cpp  smt_solver.py  trace_parser.py
core/: CMakeLists.txt  MutationEngine.cpp  ast_engine.py  evaluator.py  smt_solver.py
data/: db_manager.py  fault_patterns.py  tracer.py
frontend/: api.py  api_client.py  app.py
frontend/components/: diff_viewer.py  trace_tree.py
shared/: models.py
